# Chen-Assistant-main

./: .gitignore  LICENSE  README.md
.claude/: settings.local.json
backend/: .env.template  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
backend/chroma_db/: chroma.sqlite3
backend/docs/: api-reference.md
backend/src/: config.py  exceptions.py  main.py  middleware.py
backend/src/ai/agents/: qa_agent.py
backend/src/ai/chains/: qa_chain.py
backend/src/ai/prompts/: qa_prompt.py
backend/src/ai/tools/: qa_history.py  search.py  weak_points.py
backend/src/ai/vectorstores/: chroma_store.py
backend/src/api/v1/: router.py
backend/src/api/v1/endpoints/: analytics.py  conversations.py  documents.py  files.py  graph.py  items.py  qa.py  users.py
backend/src/core/: chroma_client.py  config.py  exceptions.py  llm_client.py  middleware.py
backend/src/models/: model.py  schemas.py
backend/src/repositories/: chroma_client.py
backend/src/services/: analytics_service.py  document_service.py  graph_service.py  qa_service.py
backend/tests/: eval_recall.py  eval_recall_auto.py
frontend/: CLAUDE.md  README.md  package-lock.json  package.json
frontend/src/: main.ts
frontend/src/apis/: analytics.ts  document.ts  graph.ts  index.ts  qa.ts
frontend/src/assets/css/: base.css
frontend/src/components/layout/: Header.vue  Layout.vue  Sidebar.vue
frontend/src/router/: index.ts
frontend/src/stores/: chat.ts
frontend/src/views/: ChatPage.vue  Dashboard.vue  GraphPage.vue  HomeView.vue
